--- a/index.html
+++ b/index.html
@@ -12378,6 +12378,7 @@ Generalisation of VW/D-Wave traffic problem</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Takeaways">Takeaways<a class="anchor-link" href="#Takeaways">&#182;</a></h1><ul>
+<li>Different to gate based quantum computing</li>
 <li>The D-Wave architecture forced us to think about out problem in a different way.</li>
 <li>Hybrid algorithms are needed (don't throw away your CPUs)</li>
 <li>Embedding the problem on the QPU graph structure is expensive</li>
